[tool.poetry]
name = "hbn-postprocessing"
version = "0.4.0"
description = "Postprocessing workflow for HBN data"
authors = ["Tristan Kuehn <tkuehn@uwo.ca>", "Jessica Lammert <jlammert@uwo.ca>"]
readme = "README.md"
packages = [{include = "hbn_postprocessing"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.3.5"
numpy = "^1.21.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
pyright = "^1.1.307"
snakefmt = "^0.8.4"
pandas-stubs = "^2.0.1.230501"

[tool.poetry.scripts]
hbn_postprocess = "hbn_postprocessing.main:main"

[tool.pyright]
typeCheckingMode = "strict"
reportInconsistentConstructor = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = true
reportUnknownArgumentType = false
reportUnusedExpression = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedBaseClass = false
reportUnusedVariable = false
reportPrivateUsage = false

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "ANN102", "TCH", "T20", "INP001"]
unfixable = ["F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
